src/main/webapp/assets/styles/videotheque.css
.left-icon {
	position : fixed;
	top : 150px;
	left : 0;
	
	font-size : 3em;
	background-color: #f5f5f5;
	border: 1px solid #e3e3e3;
	padding : 10px 10px 10px 5px;
	border-radius: 0 4px 4px 0;
	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
	
	cursor : pointer;
}

.left-icon:hover {
	background : #e6e6e6;
}

#add-video {
	top: 150px;
}

#scan-folder {
	top : 220px;

}


@media (min-width: 1200px) {
  .container {
    width: 90%;
  }
}

#use-id input {
	width : 150px;
	display : inline-block;
}

#use-id button {
	display : inline-block;
	margin-top :-3px;
}

#createVideoPanel .listGuess {
	font-size : 0.9em;
}


#createVideoPanel .listGuess a {
	display : block;
	margin : 3px 0;
	cursor : pointer;
}

.videos {
	overflow : auto;
}

.videos .display {
	margin : -5px 0px 15px 0px;
	padding : 10px;
}

.videos .display .form-inline input {
	padding : 4px;
	margin : 3px 10px;
}

.videos .display .form-inline label {
	font-weight : normal;
	color : #999;
}

.videos .display .right {
	float : right;
	margin-top : -3px;
}

.videos .display i {
	font-size : 2em;
}

/** COMMUN */
.videos .video {
	position : relative;
}

.videos .star-icon {
	cursor : pointer;
}

.videos .star-icon:hover {
	color : #F6C500;
}

.videos .favoris .star-icon{
	color : #F6C500;
}

.videos .favoris .star-icon:hover{
	color : #333;
}

.play-icon:hover {
	color : red;
}


/** STYLE LIST */
.videos.list .video {
	border : 1px solid #CCC;
	padding : 5px;
	margin-top : -1px;
	background : rgba(255, 255, 255, 0.8);
}

.videos.list .cover  {
	display : none;
}

.videos.list .video p, .videos.list .video .content, .videos.list .video h4 {
	display : inline-block;
}

.videos.list h4 {
	width :  280px;
	margin : 0;
	font-size : 1em;
	font-weight : bold;
}

.videos.list .favoris h4 {
	color : #F6C500;
}

.videos.list .video p {
	margin : 0;
	padding : 0;	
}

.videos.list .year {
	width : 80px;	
}

.videos.list .duration {
	width : 80px;
}

.videos.list .video .type {
	margin-left : 20px;
}

.videos.list .play-icon {
	position : absolute;
	right :  40px;
	top : 6px;
	font-size : 1.4em;
	cursor : pointer;
}

.videos.list .star-icon {
	position : absolute;
	right :  10px;
	top : 6px;
	font-size : 1.4em;
}

.videos.list .rate {
	display : inline-block;
	
	position : relative;
	top : 5px;
	margin-left : 30px;
	width: 80px;
	height: 18px;
	
	background-image: url(../images/aui_sprite_0036-1x._V1_.png);
	background-repeat: no-repeat;
	-webkit-background-size: 400px 650px;
	background-size: 400px 650px;
}

.videos.list .rate.rate0 {
	background-position: -85px -368px;
}

.videos.list .rate.rate0_5 {
	background-position: -239px -368px;
}

.videos.list .rate.rate1 {
	background-position: -69px -368px;
}

.videos.list .rate.rate1_5 {
	background-position: -223px -368px;
}

.videos.list .rate.rate2 {
	background-position: -53px -368px;
}

.videos.list .rate.rate2_5 {
	background-position: -207px -368px;
}

.videos.list .rate.rate3 {
	background-position: -37px -368px;
}

.videos.list .rate.rate3_5 {
	background-position: -191px -368px;
}

.videos.list .rate.rate4 {
	background-position: -21px -368px;
}

.videos.list .rate.rate4_5 {
	background-position: -175px -368px;
}

.videos.list .rate.rate5 {	
	background-position: -5px -368px;
}





/** STYLE CARD */
.videos.card .video {
	float : left;
	width : 250px;
	height : 200px;
	
	border : 1px solid #CCC;
	padding : 10px;
	margin : 5px;
	background : rgba(255, 255, 255, 0.8);
}

.videos.card .star-icon {
	position : absolute;
	right : 5px;
	top : 5px;
	font-size : 2em;
}









/** STYLE POSTER */
.videos.poster .video {
	float : left;
	width : 216px;
	height : 319px;
	
	
	box-shadow : 2px 2px 6px grey;
	margin : 7px;
	background : rgba(255, 255, 255, 0.8);
	
	overflow : hidden;
	padding : 0;
	
	position : relative;
}

.videos.poster .cover {
	width : 100%;
	height : 100%;
	
	z-index : 1;
	position : absolute;
}

.videos.poster .content {
	position : absolute;
	width : 100%;
	height : 30%;
	z-index : 2;
	
	display : none;
	
	bottom : 0;
	
	background : rgba(255,255,255,0.8);
}

.videos.poster .video:hover .content {
	display: block;
}

.videos.poster .content p, .videos.poster .content i, .videos.poster .content h4 {
	display : none;
}

.videos.poster .content .play-icon {
	display : block;
	font-size : 4em;
	text-align : center;
	margin-top : 20px;
	cursor : pointer;
}

.videos.poster .star-icon {
	position : absolute;
	right : 5px;
	top : 5px;
	font-size : 2em;
	text-shadow : 1px 1px 3px black;
	
	display : none;
}

.videos.poster .video.favoris {
	
}

